force-app/main/default/objects/Referral__c/fields/Secondary_Approver__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Referrals1</relationshipName>
    <type>Lookup</type>
</CustomField>