force-app/main/default/objects/Referral__c/fields/Sr_User_Record__c.field-meta.xml
<CustomField>
    <fullName>Sr_User_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User record of the assigned deputy's senior. Used to determine the senior who will approve the referral request.</description>
    <label>Sr User Record</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>