force-app/main/default/objects/Referral__c/fields/Supporting_Evidence__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Evidence__c</fullName>
    <label>Supporting Evidence</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>