force-app/main/default/objects/Referral__c/fields/Type_of_Request__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Request__c</fullName>
    <description>Selection driven by rec type</description>
    <label>Type of Request</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>240 Bond</fullName>
            </value>
            <value>
                <fullName>Adverse Action</fullName>
            </value>
            <value>
                <fullName>Affirmative Litigation</fullName>
            </value>
            <value>
                <fullName>Alcohol Beverage Control</fullName>
            </value>
            <value>
                <fullName>Alter Ego</fullName>
            </value>
            <value>
                <fullName>Appeal Hearing Representation</fullName>
            </value>
            <value>
                <fullName>Arbitration</fullName>
            </value>
            <value>
                <fullName>Assignment of Judgment</fullName>
            </value>
            <value>
                <fullName>CalOsha</fullName>
            </value>
            <value>
                <fullName>Citation</fullName>
            </value>
            <value>
                <fullName>Civil Action</fullName>
            </value>
            <value>
                <fullName>Civil Litigation Referral Affirmative Lawsuit</fullName>
            </value>
            <value>
                <fullName>Consultation - Appeal Hearing</fullName>
            </value>
            <value>
                <fullName>Consultation - BOFE Attorney</fullName>
            </value>
            <value>
                <fullName>Consultation - Citation</fullName>
            </value>
            <value>
                <fullName>Consultation - Interrogatory</fullName>
            </value>
            <value>
                <fullName>Consultation - JEU Attorney</fullName>
            </value>
            <value>
                <fullName>Consultation - Joint Liability</fullName>
            </value>
            <value>
                <fullName>Consultation - Judgment Enforcement</fullName>
            </value>
            <value>
                <fullName>Consultation - LC226.8</fullName>
            </value>
            <value>
                <fullName>Consultation - LC2810</fullName>
            </value>
            <value>
                <fullName>Consultation - Litigation</fullName>
            </value>
            <value>
                <fullName>Consultation - Livadas</fullName>
            </value>
            <value>
                <fullName>County or City Public Health Agency</fullName>
            </value>
            <value>
                <fullName>County or City Wage Enforcement Agency</fullName>
            </value>
            <value>
                <fullName>Criminal Investigation</fullName>
            </value>
            <value>
                <fullName>Demand</fullName>
            </value>
            <value>
                <fullName>De Novo Referral</fullName>
            </value>
            <value>
                <fullName>District Attorney Wages</fullName>
            </value>
            <value>
                <fullName>District Attorney Workers Compensation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>