force-app/main/default/objects/Referral__c/recordTypes/BOFE_Request_for_Legal_Services.recordType-meta.xml
<RecordType>
    <fullName>BOFE_Request_for_Legal_Services</fullName>
    <active>true</active>
    <description>General requests for all types of consultations that do not require a court action</description>
    <label>BOFE Request for Legal Services</label>
</RecordType>