force-app/main/default/objects/Referral__c/recordTypes/BOFE_Strategic_Case.recordType-meta.xml
<RecordType>
    <fullName>BOFE_Strategic_Case</fullName>
    <active>true</active>
    <label>BOFE Strategic Case</label>
</RecordType>