force-app/main/default/objects/Referral__c/recordTypes/PAGA_Referral.recordType-meta.xml
<RecordType>
    <fullName>PAGA_Referral</fullName>
    <active>true</active>
    <label>PAGA Referral</label>
</RecordType>