force-app/main/default/objects/Referral__c/recordTypes/Priority_Referral_to_RCI.recordType-meta.xml
<RecordType>
    <fullName>Priority_Referral_to_RCI</fullName>
    <active>true</active>
    <label>Priority Referral to RCI</label>
</RecordType>