force-app/main/default/objects/Referral__c/recordTypes/RCI_Case_Closure_Approval.recordType-meta.xml
<RecordType>
    <fullName>RCI_Case_Closure_Approval</fullName>
    <active>true</active>
    <label>RCI Case Closure Approval</label>
</RecordType>