force-app/main/default/objects/Referral__c/recordTypes/RCI_Cause_Finding_Approval.recordType-meta.xml
<RecordType>
    <fullName>RCI_Cause_Finding_Approval</fullName>
    <active>true</active>
    <label>RCI Report Approval</label>
</RecordType>