force-app/main/default/objects/Referral__c/recordTypes/RCI_Referral.recordType-meta.xml
<RecordType>
    <fullName>RCI_Referral</fullName>
    <active>true</active>
    <label>RCI (Prop 22) Referral</label>
</RecordType>