force-app/main/default/objects/Referral__c/recordTypes/RCI_Referral_for_Investigative_Hearing.recordType-meta.xml
<RecordType>
    <fullName>RCI_Referral_for_Investigative_Hearing</fullName>
    <active>true</active>
    <label>RCI Referral for Investigative Hearing</label>
</RecordType>