force-app/main/default/objects/Referral__c/recordTypes/RCI_Referral_to_DOSH.recordType-meta.xml
<RecordType>
    <fullName>RCI_Referral_to_DOSH</fullName>
    <active>true</active>
    <label>RCI Referral to DOSH</label>
</RecordType>