force-app/main/default/objects/Referral__c/recordTypes/RCI_Referral_to_WCA.recordType-meta.xml
<RecordType>
    <fullName>RCI_Referral_to_WCA</fullName>
    <active>true</active>
    <label>RCI Referral to WCA</label>
</RecordType>