force-app/main/default/objects/Referral__c/recordTypes/Refer_to_JEU.recordType-meta.xml
<RecordType>
    <fullName>Refer_to_JEU</fullName>
    <active>true</active>
    <description>Used to refer a Liable Party to JEU for WCA and Garment</description>
    <label>WCA Referral to JEU</label>
</RecordType>