force-app/main/default/objects/Referral__c/recordTypes/Request_for_Licensing_data.recordType-meta.xml
<RecordType>
    <fullName>Request_for_Licensing_data</fullName>
    <active>true</active>
    <description>For Registration object</description>
    <label>Request for Licensing data</label>
</RecordType>