force-app/main/default/objects/Referral__c/recordTypes/Request_for_Restitution_Funds_All_Units.recordType-meta.xml
<RecordType>
    <fullName>Request_for_Restitution_Funds_All_Units</fullName>
    <active>true</active>
    <label>Request for Restitution Funds (All Units)</label>
</RecordType>