force-app/main/default/objects/Referral__c/recordTypes/Revocation_Request.recordType-meta.xml
<RecordType>
    <fullName>Revocation_Request</fullName>
    <active>true</active>
    <description>Registration referral</description>
    <label>Revocation Request</label>
</RecordType>