force-app/main/default/objects/Referral__c/recordTypes/RS_Refer_to_BOFE.recordType-meta.xml
<RecordType>
    <fullName>RS_Refer_to_BOFE</fullName>
    <active>true</active>
    <description>Used to refer cases or registrations to BOFE for investigation</description>
    <label>RS Refer to BOFE</label>
</RecordType>