force-app/main/default/objects/Referral__c/recordTypes/RS_Request_for_Legal_Action.recordType-meta.xml
<RecordType>
    <fullName>RS_Request_for_Legal_Action</fullName>
    <active>true</active>
    <description>RS Request for Legal Action</description>
    <label>RS Request for Legal Action</label>
</RecordType>