force-app/main/default/objects/Referral__c/recordTypes/WCA_De_Novo_Referral.recordType-meta.xml
<RecordType>
    <fullName>WCA_De_Novo_Referral</fullName>
    <active>true</active>
    <description>Wage - De Novo Referral (Berman Appeal)</description>
    <label>WCA De Novo Referral</label>
</RecordType>