force-app/main/default/objects/Referral__c/recordTypes/WCA_Request_for_Legal_Action.recordType-meta.xml
<RecordType>
    <fullName>WCA_Request_for_Legal_Action</fullName>
    <active>true</active>
    <label>WCA Request for Legal Action</label>
</RecordType>