force-app/main/default/objects/Referral__c/validationRules/Additional_Information_Requested.validationRule-meta.xml
<ValidationRule>
    <fullName>Additional_Information_Requested</fullName>
    <active>true</active>
    <description>Must have additional info requested field filled to select "Additional Information Needed" referral status.</description>
    <errorConditionFormula>(isblank(Additional_Info_Requested__c) || isnull(Additional_Info_Requested__c)) &amp;&amp;
ISPICKVAL( Request_Status__c , "Additional Information Needed")</errorConditionFormula>
    <errorMessage>The "Additional Info Requested" field must be filled to select "Additional Information Needed" referral status.</errorMessage>
</ValidationRule>