force-app/main/default/objects/Referral__c/validationRules/BOFE_Legal_Max_Assignments.validationRule-meta.xml
<ValidationRule>
    <fullName>BOFE_Legal_Max_Assignments</fullName>
    <active>true</active>
    <description>Ensures no more than the maximum allowed assignments are allowed on BOFE Legal referrals</description>
    <errorConditionFormula>(
  (
    RecordType.Name = 'BOFE Request for Legal Court Action' 
  ) 
  &amp;&amp;  Referral_Assignments__c &gt; 1 
)
|| 
RecordType.Name = 'BOFE Civil Litigation Referral' 
  &amp;&amp;  Referral_Assignments__c &gt; 5</errorConditionFormula>
    <errorMessage>You have assigned too many individuals to this referral type.</errorMessage>
</ValidationRule>