force-app/main/default/objects/Referral__c/validationRules/Disposition_cannot_be_NULL.validationRule-meta.xml
<ValidationRule>
    <fullName>Disposition_cannot_be_NULL</fullName>
    <active>false</active>
    <description>When Status = Closed, the Disposition must have data.

For Wage and Garment.
Added RCI 3/15/18. Removed for RCI 6/25/2021.</description>
    <errorConditionFormula>CONTAINS(RecordType.DeveloperName, "WCA")
&amp;&amp;
TEXT( Request_Status__c ) = "Closed"
&amp;&amp;
ISPICKVAL(Disposition__c, "")</errorConditionFormula>
    <errorMessage>You must enter a value into Disposition when Status = Closed</errorMessage>
</ValidationRule>