force-app/main/default/objects/Referral__c/validationRules/Req_Assigned_Deputy.validationRule-meta.xml
<ValidationRule>
    <fullName>Req_Assigned_Deputy</fullName>
    <active>true</active>
    <description>7-28L updated to screen out PAGA cases. Requires assigned deputy on the case before a referral can be made</description>
    <errorConditionFormula>ISBLANK ( Case__r.Assigned_Deputy__c ) 
&amp;&amp; (NOT(Case__r.RecordType.DeveloperName = 'PAGA_Case') &amp;&amp; NOT(RecordType.DeveloperName = 'Revocation_Request') &amp;&amp; NOT(RecordType.DeveloperName = 'RS_Refer_to_BOFE') &amp;&amp; NOT(RecordType.DeveloperName = 'RS_Request_for_Legal_Action') &amp;&amp; NOT(RecordType.DeveloperName = 'Request_for_Licensing_data'))</errorConditionFormula>
    <errorMessage>Please assign this case to a deputy before creating a referral</errorMessage>
</ValidationRule>