force-app/main/default/objects/Referral__c/validationRules/Require_outcome_on_close.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_outcome_on_close</fullName>
    <active>true</active>
    <description>When status is closed, require an outcome.</description>
    <errorConditionFormula>ISPICKVAL ( Request_Status__c , 'closed' ) 
&amp;&amp;
ISPICKVAL (  Outcome__c, '' )
&amp;&amp;
CONTAINS(RecordType.DeveloperName, "BOFE")</errorConditionFormula>
    <errorMessage>Please enter an outcome in order to close a request</errorMessage>
</ValidationRule>