force-app/main/default/objects/Referral__c/validationRules/RS_Referral_status_case.validationRule-meta.xml
<ValidationRule>
    <fullName>RS_Referral_status_case</fullName>
    <active>true</active>
    <description>require a case when the referral status is set to accepted</description>
    <errorConditionFormula>RecordType.DeveloperName = 'RS_Refer_to_BOFE'
&amp;&amp;
ISPICKVAL ( Request_Status__c , 'Accepted' )
&amp;&amp; 
ISBLANK ( Case__c )</errorConditionFormula>
    <errorMessage>Please select the case created from this referral in order to accept it.</errorMessage>
</ValidationRule>