force-app/main/default/objects/Referral__c/validationRules/Select_low_wage_industry.validationRule-meta.xml
<ValidationRule>
    <fullName>Select_low_wage_industry</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Text(Case__r.Low_Wage_Occupation__c)) 
&amp;&amp; ISPICKVAL(Type_of_Request__c, 'Low-Wage Industry (Enhanced Enforcement)')</errorConditionFormula>
    <errorMessage>A Low wage industry needs to be selected on the related case management object for this type of referral</errorMessage>
</ValidationRule>