force-app/main/default/objects/Referral__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Referral_Date__c</columns>
    <columns>Request_Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Approval_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>