force-app/main/default/objects/Referral__c/listViews/BOFE_Request_for_Legal_Services.listView-meta.xml
<ListView>
    <fullName>BOFE_Request_for_Legal_Services</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Referral_Date__c</columns>
    <columns>Legal_Office_lookup__c</columns>
    <columns>Request_Status__c</columns>
    <columns>Referring_Deputy__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Referral__c.BOFE_Request_for_Legal_Services</value>
    </filters>
    <label>BOFE Request for Legal Services</label>
</ListView>