force-app/main/default/objects/Referral__c/listViews/BOFE_Strategic_Case.listView-meta.xml
<ListView>
    <fullName>BOFE_Strategic_Case</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Type_of_Request__c</columns>
    <columns>Referral_Date__c</columns>
    <columns>Legal_Office_lookup__c</columns>
    <columns>Request_Status__c</columns>
    <columns>Referring_Deputy__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Referral__c.BOFE_Strategic_Case</value>
    </filters>
    <label>BOFE Strategic Case</label>
</ListView>