force-app/main/default/objects/Referral__c/listViews/My_Own_Referrals.listView-meta.xml
<ListView>
    <fullName>My_Own_Referrals</fullName>
    <columns>NAME</columns>
    <columns>Referral_Date__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Case__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Referrals</label>
</ListView>