force-app/main/default/objects/Referral__c/listViews/PAGA_ALL_To_Be_Reviewed.listView-meta.xml
<ListView>
    <fullName>PAGA_ALL_To_Be_Reviewed</fullName>
    <booleanFilter>(1 AND 2) AND (3 OR 4 OR 5 OR 6 OR 7)</booleanFilter>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Request_Status__c</columns>
    <columns>Unit__c</columns>
    <columns>Investigation_Decision_Deadline_Date__c</columns>
    <columns>Decision__c</columns>
    <columns>Investigation_Deadline_Date__c</columns>
    <columns>Division_Screener__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Referral__c.PAGA_Referral</value>
    </filters>
    <filters>
        <field>Request_Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>Unit__c</field>
        <operation>equals</operation>
        <value>BOFE</value>
    </filters>
    <filters>
        <field>Unit__c</field>
        <operation>equals</operation>
        <value>RCI</value>
    </filters>
    <filters>
        <field>Unit__c</field>
        <operation>equals</operation>
        <value>PW</value>
    </filters>
    <filters>
        <field>Unit__c</field>
        <operation>equals</operation>
        <value>DOSH</value>
    </filters>
    <filters>
        <field>Unit__c</field>
        <operation>equals</operation>
        <value>DAS</value>
    </filters>
    <label>PAGA ALL REFERRALS - To Be Reviewed</label>
</ListView>